--- a/index.html
+++ b/index.html
@@ -2,45 +2,35 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
 </head>
 
 <body>
-
     <main class="container">
-
-        <h1 id="welcoming">
-            Welcome to my website
-        </h1>
+        <h1 id="welcoming">Welcome to my website</h1>
 
         <div class="box1">
-            <h3>
-                You can't see me if your phone width is less than 500px
-            </h3>
+            <h3>You can't see me if your phone width is less than 500px</h3>
         </div>
 
         <div class="content">
-
             <div class="box3">
-                <img src="https://placeimg.com/640/480/animals/grayscale" alt="">
+                <img src="https://placeimg.com/640/480/animals/grayscale" alt="" />
             </div>
 
             <div class="box4">
-                <img src="https://placeimg.com/640/480/nature/grayscale" alt="">
+                <img src="https://placeimg.com/640/480/nature/grayscale" alt="" />
             </div>
 
             <div class="box5">
-                <img src="https://placeimg.com/640/480/people/grayscale" alt="">
+                <img src="https://placeimg.com/640/480/people/grayscale" alt="" />
             </div>
-
         </div>
-
     </main>
-
 </body>
 
 </html>
